# partimorph

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.ipynb
docs/superpowers/specs/: 2026-04-11-refactor-partimorph-design.md
notebooks/: test.ipynb
partimorph/: __init__.py  analyzer.py  fitting.py  metrics.py  misc.py  plot.py  schema.py  validation.py
partimorph/utils/: __init__.py  create_mask.py  geometry.py  parametric_mask.py  plot.py
partimorph/wadell/: __init__.py  boundary.py  corner.py  discretize.py  roundness.py  smoothing.py
src/partimorph/: __init__.py  analyzer.py  fitting.py  metrics.py  schema.py  validation.py
src/partimorph/utils/: create_mask.py  plot.py
src/partimorph/wadell/: boundary.py  corner.py  roundness.py  smoothing.py
tests/: test_partimorph.py
