[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "partimorph"
version = "0.1.2"
authors = [
    { name = "PartiMorph Contributors" }
]
description = "Particle shape analysis and visualization library."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/phykn/partimorph"
Repository = "https://github.com/phykn/partimorph"
Issues = "https://github.com/phykn/partimorph/issues"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "scikit-image",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["partimorph*"]
